# entity-resolution-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  services.py
docs/: index.html
entity_resolution/: er.py
tmp/data/: active_listings_x.csv
tmp/data/2023-12-17/: active_companies_X.csv
tmp/data/2023-12-18/: active_companies_X.csv
tmp/data/latest/: active_companies_X.csv
tmp/plot/: active_listings_x.html
tmp/plot/2023-12-17/: active_companies_X.html
tmp/plot/2023-12-18/: active_companies_X.html
web_crawler/: items.py  middlewares.py  pipelines.py  settings.py
web_crawler/spiders/: crawler.py  parser.py  rest_spider.py
web_crawler/spiders/helpers/: constants.py
