[tool.poetry]
name = "entity-resolution-pipeline"
version = "0.1.0"
description = "Simple entity resolution using Public Data"
authors = ["raphelemmanuvel"]
readme = "README.md"

packages = [
    { include = "entity_resolution" },
]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
black = "^23.12.0"
pyvis = "^0.3.2"
networkx = "^3.2.1"
pandas = "^2.1.4"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
